Refactor database methods

--- a/src/index.html
+++ b/src/index.html
@@ -144,6 +144,6 @@
             windowDispatcher.sendRendererEvent('fakeMainTag', { uid, rssi});
 
          document.addEventListener('DOMContentLoaded', () =>
-            windowDispatcher.sendRendererEvent('onViewReady');
+            windowDispatcher.sendRendererEvent('onViewReady'));
     </script>
 </html>
