--- a/src/index.html
+++ b/src/index.html
@@ -10,9 +10,7 @@
         <link rel="stylesheet" type="text/css" href="./view/styles/race.css">
 
         <link rel="stylesheet" type="text/css" href="./view/styles/results/results.css">
-        <link rel="stylesheet" type="text/css" href="./view/styles/results/history.css">
-        <link rel="stylesheet" type="text/css" href="./view/styles/results/total.css">
-        <link rel="stylesheet" type="text/css" href="./view/styles/results/users.css">
+        <link rel="stylesheet" type="text/css" href="./view/styles/results/tables.css">
 
         <link rel="stylesheet" type="text/css" href="./view/styles/rssi.css">
 
@@ -57,8 +55,8 @@
                 <div id="results" class="results">
                     <div class="result-tabs">
                         <div id="tab-history" class="result-tab result-tab-selected">История</div>
-                        <div id="tab-total" class="result-tab">Итого</div>
                         <div id="tab-users" class="result-tab">Участники</div>
+                        <div id="tab-total" class="result-tab">Итого</div>
                     </div>
                     <div class="results-view ui-block">
 
@@ -74,6 +72,14 @@
                             </table>
                         </div>
 
+                        <div id="users" class="users">
+                            <table>
+                                <tr class="users-header">
+                                    <th class="users-row-uid">Имя</th>
+                                    <th class="users-row-name">Лучшее время</th>
+                                </tr>
+                            </table>
+                        </div>
 
                         <div id="total" class="total">
                             <table>
@@ -81,16 +87,6 @@
                                     <th class="total-row-name">Имя</th>
                                     <th class="total-row-best-time">Лучшее время</th>
                                     <th class="total-row-best-count">Всего заездов</th>
-                                </tr>
-                            </table>
-                        </div>
-
-                        <div id="users" class="users">
-                            <table>
-                                <tr class="users-header">
-                                    <th class="users-row-name">Имя</th>
-                                    <th class="users-row-best-time">Лучшее время</th>
-                                    <th class="users-row-best-count">Всего заездов</th>
                                 </tr>
                             </table>
                         </div>
@@ -112,7 +108,8 @@
             </div>
         </div>
     </body>
-    <script src="./view/lib/plotly-latest.min.js"></script>
+    <!-- TEMPORARY DISABLED -->
+    <!-- <script src="./view/lib/plotly-latest.min.js"></script> -->
     <script>
          window.commonLib = require('./view/lib/common-lib');
          const { ipcRenderer } = require('electron');
