--- a/src/index-deprecated.html
+++ b/src/index-deprecated.html
@@ -142,6 +142,6 @@
             windowDispatcher.sendRendererEvent('fakeMainTag', { uid, rssi});
 
          document.addEventListener('DOMContentLoaded', () =>
-            windowDispatcher.sendRendererEvent('onViewReady'));
+            windowDispatcher.sendRendererEvent('viewDidMount'));
     </script>
 </html>
