--- a/src/index-deprecated.html
+++ b/src/index-deprecated.html
@@ -109,8 +109,7 @@
             </div>
         </div>
     </body>
-    <!-- TEMPORARY DISABLED -->
-    <!-- <script src="./view/lib/plotly-latest.min.js"></script> -->
+    <script src="./view-deprecated/lib/plotly-latest.min.js"></script>
     <script>
          window.commonLib = require('./view-deprecated/lib/common-lib');
          const { ipcRenderer } = require('electron');
