- add react-scripts - remove webpack - add changelog

--- a/src/index-deprecated.html
+++ b/src/index-deprecated.html
@@ -26,7 +26,7 @@
                             <div class="smartbanner-reader-status smartbanner-reader-disabled"></div>
                             <span class="smartbanner-reader-title">Главный считыватель</span>
                         </div>
-                        <img class="ui-setting-icon" src="./view/images/icons/setting.svg">
+                        <img class="ui-setting-icon" src="client/images/icons/setting.svg">
                     </div>
 
                     <div class="smartbanner-reader smartbanner-portablereader">
